Fix loginuserpass.twig for SSP 2.2.2 compat

--- a/themes/bstheme/core/loginuserpass.twig
+++ b/themes/bstheme/core/loginuserpass.twig
@@ -23,7 +23,7 @@
 
   <div class="row">
     <div class="col-md-6">
-      <form id="f" class="form-horizontal" action="{{ moduleURL('core/loginuserpass', {'AuthState': AuthState}) }}" method="post" name="f" spellcheck="false">
+      <form id="f" class="form-horizontal" action="{{ formURL }}" method="post" name="f" spellcheck="false">
 
         <div class="form-group">
           <label for="form_username" class="col-lg-4 control-label">{{ 'Username'|trans }}</label>
